Add get_all_users endpoint; update swagger
